
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


typedef int gpointer ;
typedef scalar_t__ gint ;
typedef TYPE_1__* gconstpointer ;
struct TYPE_5__ {scalar_t__ last_sync_time; } ;
typedef TYPE_1__ SeafRepo ;



gint
cmp_repos_by_sync_time (gconstpointer a, gconstpointer b, gpointer user_data)
{
    const SeafRepo *repo_a = a;
    const SeafRepo *repo_b = b;

    return (repo_a->last_sync_time - repo_b->last_sync_time);
}
